--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta  name="description"  content="Web site created using create-react-app" />
-    <link rel="icon" rel="apple-touch-icon" href="./favicon.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <title>Restorent  App</title>
   </head>
   <body>
