--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     
 
     <title>Restorent  App</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SPVVQ58RRH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());                                                               
+ 
+  gtag('config', 'G-SPVVQ58RRH');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
