some small changes

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.png">
     
 
-    <title>Restorent  App</title>
+    <title>Restaurant  App</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SPVVQ58RRH"></script>
 <script>
