--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en"  >
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,9 +19,11 @@
   gtag('js', new Date());                                                               
  
   gtag('config', 'G-SPVVQ58RRH');
+  // var x = localStorage.getItem("Token",false);
+
 </script>
   </head>
-  <body>
+  <body  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
