--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta  name="description"  content="Web site created using create-react-app" />
+    <meta  name="description"  content="Complete Digital Menu Solution for Effortless Ordering and Enhanced Customer Satisfaction." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
-    <title>Restaurant  App</title>
+    <title>Harbor Bites - Digital Menu for Restaurants</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SPVVQ58RRH"></script>
-    <link rel="icon" type="image/x-icon" href="./favicon.png">    
-    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <link rel="icon" type="image/x-icon" href="./defaultimg.svg">    
 
 <script>
   window.dataLayer = window.dataLayer || [];
