Added Helmet and added logo in new customer form.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
     <title>Harbor Bites - Digital Menu for Restaurants</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SPVVQ58RRH"></script>
-    <link rel="icon" type="image/x-icon" href="./defaultimg.svg">    
+    <link rel="icon" type="image/x-icon" href="./defaultimg.svg"/>    
 
 <script>
   window.dataLayer = window.dataLayer || [];
